<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerCD"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_trangchu"
    tools:context=".setting.CaiDatActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp">

        <Button
            android:id="@+id/btnNgonNgu"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="68dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/custom_edittext"
            android:text="@string/button_setting_language"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnCheDoManHinh"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/custom_edittext"
            android:text="@string/button_setting_screen_mode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnNgonNgu" />

        <Button
            android:id="@+id/btn_viet"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="150dp"
            android:background="@drawable/custom_edittext"
            android:text="@string/button_vietnamese" />

        <Button
            android:id="@+id/btn_eng"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginLeft="220dp"
            android:layout_marginTop="150dp"
            android:background="@drawable/custom_edittext"
            android:text="@string/button_english" />

    </RelativeLayout>

    <include
        layout="@layout/drawer_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <include
        layout="@layout/content_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#FFFFFF"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/drawer_menu">

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>