<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="350dp"
    android:background="@drawable/bg_info_hospital_mo"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/aicapnang"
        android:gravity="center"
        android:text="Thông Tin Cửa Hàng"
        android:textColor="#977559"
        android:textSize="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/font_uvn_3"
            android:gravity="center_horizontal"
            android:text="@string/title_info_shop_name"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/tvTTTenCuaHang"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/font_uvn_3"
            android:maxLines="1"
            android:textColor="#000000" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/font_uvn_3"
            android:text="@string/title_info_shop_address"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/tvTTDiaDiemCH"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/font_uvn_3"
            android:textColor="#000000" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/font_uvn_3"
            android:text="@string/title_info_shop_service"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/tvTTDichVuCH"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/font_uvn_3"
            android:text=""
            android:textColor="#000000" />
    </LinearLayout>

    <Button
        android:id="@+id/btnThoatTTCH"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_edittext"
        android:text="@string/button_exit" />
</LinearLayout>